<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Bihar Land Records</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_item_found">No Item Found</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="apply_now">View More</string>
    <string name="save_job">Click Here to Get Details</string>
    <string name="save_job_already">Remove this job</string>
    <string name="job_description">Description</string>
    <string name="job_skill">విద్యార్హతలు</string>
    <string name="job_qualification">దరఖాస్తు ప్రారంభ - చివరి తేదీ</string>
    <string name="job_salary">ఎంపిక విధానం</string>
    <string name="job_type">Job Type</string>
    <string name="job_work_day">జీతం</string>
    <string name="job_work_time">దరఖాస్తు విధానం</string>
    <string name="job_exp">यह "बिहार भूमि अभिलेख" एप्लिकेशन लोगों को बिहार भूमि विवरण जानने में सक्षम बनाने के लिए डिज़ाइन किया गया है। यह बिहार राज्य सरकार के शासन में एक कदम आगे है।

        \n\n
        <b>గమనిక:</b> यह ऐप सरकार द्वारा नहीं बनाया गया था। बिहार भूमि विवरण बिहार भूमि अधिकारी पर आधारित <b>[http://biharbhumi.bihar.gov.in/]</b> आसान पहुंच के लिए वेबसाइट
\n\n
        <b>Note:</b> This App was not created by the government of Bihar. Based on the Bihar Land Records official <b>[http://biharbhumi.bihar.gov.in]</b> website for easy to know the land records details of Bihar.</string>
    <string name="name">Name :-</string>
    <string name="email">Email :-</string>
    <string name="telephone">Telephone :-</string>
    <string name="city">City :-</string>
    <string name="address">Location :-</string>
    <string name="password">Password :-</string>
    <string name="profile_pic">Profile Picture :-</string>
    <string name="resume">Resume :-</string>
    <string name="choose">Choose</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email_ab">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_favourite">Saved Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">About us</string>
    <string name="menu_save_job">Saved Job</string>
    <string name="menu_applied_job">Applied Job</string>
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="conne_msg2">Please connect to working Internet connection</string>
    <string name="nodata">No Data Found</string>
    <string name="name_login_lbl">Name</string>
    <string name="name_login">Enter Name</string>
    <string name="email_login_lbl">Email</string>
    <string name="email_login">Enter Email</string>
    <string name="password_login_lbl">Password</string>
    <string name="password_login">Enter Password</string>
    <string name="phone_login_lbl">Phone</string>
    <string name="phone_login">Enter Phone</string>
    <string name="login">LOG IN</string>
    <string name="skip">Continue</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">Register</string>
    <string name="already_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="user_company_name">Your Current Company name</string>
    <string name="user_exp">Your Current Experience</string>
    <string name="user_skills">Your Current Skills</string>
    <string name="submit">Submit</string>
    <string name="individual_rd">Individual</string>
    <string name="company_rd">Company</string>
    <string name="company_name_lbl">Company Name</string>
    <string name="company_name">Enter Company Name</string>
    <string name="company_email_lbl">Company Email</string>
    <string name="company_email">Enter Company Email</string>
    <string name="company_mobile_lbl">Company Mobile Number</string>
    <string name="company_mobile">Enter Company Mobile Number</string>
    <string name="company_address_lbl">Company Address</string>
    <string name="company_address">Enter Company Address</string>
    <string name="company_desc_lbl">Company Description</string>
    <string name="company_desc">Enter Company Description</string>
    <string name="company_work_day_lbl">Company Work Day</string>
    <string name="company_work_day">Enter Company Work Day (Mon-Fri)</string>
    <string name="company_work_time_lbl">Company Work Time</string>
    <string name="company_work_time">Enter Company Work Time (9:00 AM to 6:00 PM)</string>
    <string name="company_website_lbl">Company Website</string>
    <string name="company_website">Enter Company Website</string>
    <string name="company_logo">Company Logo</string>
    <string name="skills">Skills</string>
    <string name="enter_skills">Enter Skills</string>
    <string name="current_company">Current Company :-</string>
    <string name="enter_company">Enter Company Name</string>
    <string name="experience">Experience :-</string>
    <string name="enter_experience">Enter Experience</string>
    <string name="enter_skills_must">Please Enter Skills</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="favourite_add">Job has been saved</string>
    <string name="favourite_remove">Job has been removed</string>
    <string name="share_msg">यह "बिहार भूमि अभिलेख" एप्लिकेशन लोगों को बिहार भूमि विवरण जानने में सक्षम बनाने के लिए डिज़ाइन किया गया है। यह बिहार राज्य सरकार के शासन में एक कदम आगे है। Link: https://play.google.com/store/apps/details?id=</string>
    <string name="default_email">राजस्व एवं भूमि सुधार विभाग</string>
    <string name="privacy_url">https://havilahangel.blogspot.com/p/bihar-land-records-privacy-policy.html?m=1</string>
    <string name="exit">Exit</string>
    <string name="exit_msg">Are You Sure You Want To Quit?</string>
    <string name="need_login">You have to Login first</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="job_provider">Job Provider</string>
    <string name="job_list">Job List</string>
    <string name="add_job">Add Job</string>
    <string name="edit_job">Edit Job</string>
    <string name="job_title_lbl">Job Title :-</string>
    <string name="job_title">Enter Job Title</string>
    <string name="job_designation_lbl">Organization :-</string>
    <string name="job_designation">Enter Designation</string>
    <string name="job_description_lbl">Description :-</string>
    <string name="job_description_add">Enter Description</string>
    <string name="job_salary_lbl">Salary :-</string>
    <string name="job_salary_add">Enter Salary</string>
    <string name="job_company_lbl">Company Name :-</string>
    <string name="job_company_add">Enter Company Name</string>
    <string name="job_website_lbl">Website :-</string>
    <string name="job_website_add">Enter Website</string>
    <string name="job_phone_lbl">Phone :-</string>
    <string name="job_phone_add">Enter Phone</string>
    <string name="job_email_lbl">Email :-</string>
    <string name="job_email_add">Enter Email</string>
    <string name="job_vacancy_lbl">Vacancy :-</string>
    <string name="job_vacancy_lbl_details">Vacancy - %s</string>
    <string name="job_vacancy_add">Enter Vacancy</string>
    <string name="job_address_lbl">Location :-</string>
    <string name="job_address_add">Enter Address</string>
    <string name="job_qualification_lbl">Qualification :-</string>
    <string name="job_qualification_add">Enter Qualification </string>
    <string name="job_skill_lbl">Skill :-</string>
    <string name="job_skill_add">Enter Skill</string>
    <string name="job_date_lbl">Date :-</string>
    <string name="job_date_add">Enter Date</string>
    <string name="job_image_lbl">Featured Image :-</string>
    <string name="job_type_lbl">Job Type :-</string>
    <string name="job_work_day_lbl_add">Job Work Day :-</string>
    <string name="job_work_day_add">Enter Job Work Day (Mon-Fri)</string>
    <string name="job_work_time_lbl_add">Job Work Time :-</string>
    <string name="job_work_time_add">Enter Job Work Time (9:00 AM to 6:00 PM)</string>
    <string name="job_exp_lbl_add">Job Experience :-</string>
    <string name="job_exp_add">Enter Job Experience</string>
    <string name="image_choose">Choose</string>
    <string name="save">Save</string>
    <string name="loading">Loading</string>
    <string name="required">Featured Image Required</string>
    <string name="job_category_lbl">Category :-</string>
    <string name="job_city_lbl">City :-</string>
    <string name="total_job">User Applied :- %1$s</string>
    <string name="delete_this_job">Delete this Job</string>
    <string name="delete_job_confirm">Are you sure you want to delete this job?</string>
    <string name="no_job_found">No job found \n Add with + button</string>
    <string name="show_resume">Show Resume</string>
    <string name="date_posted">Date Posted :-</string>
    <string name="designation">Organization :- </string>
    <string name="please_update_city">Please Update Your City</string>
    <string name="please_update_address">Please Update Your Address</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="search_keyword">Enter Your Keyword</string>
    <string name="profile_saved_job">Saved Jobs</string>
    <string name="profile_applied_job">Applied Jobs</string>
    <string name="profile_key_skills">Key Skills</string>
    <string name="profile_key_skills_add">Add</string>
    <string name="profile_personal">Personal Details</string>
    <string name="company_details">Company Details</string>
    <string name="profile_upload_resume">Upload Resume</string>
    <string name="profile_resume_attach">Attach file from your phone</string>
    <string name="profile_resume_pdf">.(pdf|docx|doc) Accepted</string>
    <string-array name="sample_array">
        <item>Category</item>
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
        <item>Category 5</item>
        <item>Category 6</item>
    </string-array>
    <string name="home_search_head_line">Search Govt. and Private Jobs</string>
    <string name="home_search_find">Your Future Starts here</string>
    <string name="home_search_keyword">Search keywords</string>
    <string name="half_time">Private Job</string>
</resources>