<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/search_top_bg" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_exp"
                android:textSize="14sp"
                android:textAlignment="center"/>



            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_login_lbl"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/email_login"
                        android:inputType="textEmailAddress"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_login_lbl"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:hint="@string/password_login"
                        android:inputType="textPassword"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/text_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <Button
                    android:visibility="gone"
                    android:id="@+id/button_log_in"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/outline_white_button"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/button_skip"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_button"
                    android:text="@string/skip"
                    android:textColor="@color/colorPrimary"
                    android:textSize="19sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="5dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="50dp"
                tools:ignore="NestedScrolling">

                <com.facebook.ads.NativeAdLayout
                    android:id="@+id/native_ad_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>




    </ScrollView>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lyt_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/login_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>