<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/item_space"
    android:layout_marginBottom="@dimen/item_space"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_gravity="center_vertical">


                <LinearLayout
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_job_title"
                        fontPath="fonts/customBold.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:maxLines="2"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingLeft="5dp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:id="@+id/text_job_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/app_name"
                        android:textColor="@color/profile_content"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:layout_toStartOf="@+id/text_job_category"
                            android:foregroundGravity="center"
                            android:gravity="start"
                            tools:ignore="UnknownIdInLayout">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/cardJobType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                card_view:cardBackgroundColor="@color/half_time_bg"
                                card_view:cardCornerRadius="5dp"
                                card_view:cardElevation="1dp"
                                card_view:cardUseCompatPadding="false">

                                <TextView
                                    android:id="@+id/text_job_type"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginEnd="5dp"
                                    android:layout_marginBottom="2dp"
                                    android:includeFontPadding="false"
                                    android:text="@string/half_time"
                                    android:textColor="@color/half_time_text"
                                    android:textSize="13sp"
                                    tools:ignore="MissingPrefix" />

                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                        <ImageView
                            android:id="@+id/imageFav"
                            android:layout_width="14dp"
                            android:layout_height="18dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="11dp"
                            android:src="@drawable/ic_fav"
                            android:visibility="gone" />

                    </RelativeLayout>

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_job"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder"
                    card_view:civ_border_color="@color/image_border"
                    card_view:civ_border_width="1dp" />


            </RelativeLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_apply_job"
                    fontPath="fonts/customBold.otf"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button"
                    android:paddingTop="2dp"
                    android:text="@string/apply_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:contentDescription="@string/app_name" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>